--- a/AirsoftApplication/Web/AirsoftApplication.Web/Views/Shared/_CommentPartial.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Views/Shared/_CommentPartial.cshtml
@@ -1,5 +1,9 @@
 ﻿@model AirsoftApplication.Web.ViewModels.Events.EventDeteilsViewModel
+@inject Microsoft.AspNetCore.Identity.UserManager<AirsoftApplication.Data.Models.Users.ApplicationUser> UserManager
 
+@{
+    var user = await this.UserManager.GetUserAsync(this.User);
+}
 
 @foreach (var comment in Model.Comments)
 {
@@ -33,7 +37,42 @@
             <partial name="_CommentContentPartial" model="@comment" />
 
             <div class="d-md-flex justify-content-md-end">
-                <a class="btn btn-primary btn-sm" asp-controller="Comments" asp-action="SubComment" asp-route-eventId="@Model.Id" asp-route-commentId="@comment.Id">Comment</a>
+                <a class="btn btn-primary btn-sm mr-1" asp-controller="Comments" asp-action="SubComment" asp-route-eventId="@Model.Id" asp-route-commentId="@comment.Id">Comment</a>
+
+                @if (user == null)
+                {
+                    <a class="btn btn-secondary btn-sm mr-1">
+                        <i class="fas fa-thumbs-up"></i> (@comment.Vote.PositiveVotes)
+                    </a>
+                    <a class="btn btn-secondary btn-sm">
+                        <i class="fas fa-thumbs-down"></i> (@comment.Vote.NegativeVotes)
+                    </a>
+                }
+                else
+                {
+                    if (!comment.Vote.VotedUsers.ToList().Contains(user.Id))
+                    {
+                        <a class="btn btn-primary btn-sm mr-1" asp-controller="Vote" asp-action="PositiveVote" asp-route-eventId="@Model.Id" asp-route-guidingId="@comment.Id">
+                            <i class="fas fa-thumbs-up"></i> (@comment.Vote.PositiveVotes)
+                        </a>
+                        <a class="btn btn-danger btn-sm" asp-controller="Vote" asp-action="NegativeVote" asp-route-eventId="@Model.Id" asp-route-guidingId="@comment.Id">
+                            <i class="fas fa-thumbs-down"></i> (@comment.Vote.NegativeVotes)
+                        </a>
+                    }
+                    else
+                    {
+                        <a class="btn btn-secondary btn-sm mr-1">
+                            <i class="fas fa-thumbs-up"></i> (@comment.Vote.PositiveVotes)
+                        </a>
+                        <a class="btn btn-secondary btn-sm">
+                            <i class="fas fa-thumbs-down"></i> (@comment.Vote.NegativeVotes)
+                        </a>
+                    }
+                }
+
+
+
+
             </div>
             <hr />
         </div>
