--- a/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Events/CreateEvent.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Events/CreateEvent.cshtml
@@ -22,6 +22,7 @@
                 <div class="col-lg-6 col-5 text-right">
                     <a asp-controller="Events" asp-action="CreateField" class="btn btn-sm btn-neutral">New field</a>
                     <a asp-area="" asp-controller="Team" asp-action="Events" class="btn btn-sm btn-neutral">
+                        <i class="fas fa-bullhorn text-primary"></i>
                        All evnts
                     </a>
                 </div>
