--- a/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Users/RemovePlayerRole.cshtml
+++ b/AirsoftApplication/Web/AirsoftApplication.Web/Areas/Administration/Views/Users/RemovePlayerRole.cshtml
@@ -30,14 +30,7 @@
     <div class="row">
         <div class="col-xl-4 order-xl-2">
             <div class="card card-profile">
-                @if (Model.ProfileImage != null)
-                {
-                    <img src="@Model.ProfileImage" alt="Image placeholder" class="card-img-top">
-                }
-                else
-                {
-                    <img src="~/Images/default-avatar.png" alt="Image placeholder" class="card-img-top">
-                }
+                <img src="~/Images/default-avatar.png" alt="Image placeholder" class="card-img-top">
                 <div class="row justify-content-center">
                     <div class="col-lg-3 order-lg-2">
                         <div class="card-profile-image">
@@ -71,27 +64,23 @@
                     </div>
                 </div>
                 <div class="card-body">
-                    <form asp-action="SetPlayerRole" enctype="multipart/form-data">
+                    <form asp-action="RemovePlayerRole" enctype="multipart/form-data">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                        <div class="form-group">
-                            <label asp-for="RoleName" class="control-label alert-heading"><strong>Set user role</strong></label>
-                            <select asp-for="RoleName" class="form-control  alert-heading">
-                                @if (Model.ApplicationRoles.Count() > 0)
-                                {
-                                    @foreach (var role in Model.ApplicationRoles)
+                            <div class="form-group">
+                                <label asp-for="RoleName" class="control-label alert-heading"><strong>Remove user role</strong></label>
+                                <select asp-for="RoleName" class="form-control  alert-heading">
+                                    @foreach (var role in Model.CurrentRoles.Split("/"))
                                     {
-                                        <option value="@role.Name">@role.Name</option>
+                                        <option value="@role">@role</option>
                                     }
-
-                                }
-                            </select>
-                            <span asp-validation-for="RoleName" class="text-danger"></span>
-                        </div>
+                                </select>
+                                <span asp-validation-for="RoleName" class="text-danger"></span>
+                            </div>
                         <div form-group>
                             <input type="hidden" asp-for="UserId" />
                         </div>
                         <div class="form-group">
-                            <input type="submit" value="Set Role" class="btn btn-primary" />
+                            <input type="submit" value="Remove Role" class="btn btn-primary" />
                         </div>
                     </form>
 
